fix: panels spacing + user list for responsiveness

--- a/emhttp/plugins/dynamix/styles/default-base.css
+++ b/emhttp/plugins/dynamix/styles/default-base.css
@@ -442,7 +442,7 @@ a[href="/Tools/Downgrade"] .icon-update:before {
     margin-right: 4px;
 }
 div.title {
-    margin: 20px 0 32px 0;
+    margin: 20px 0 0 0;
     padding: 8px 10px;
     clear: both;
     border-bottom: 1px solid var(--table-border-color);
@@ -450,6 +450,11 @@ div.title {
     letter-spacing: 1.8px;
     font-size: 1.4rem;
 }
+
+.title + .title {
+    margin-top: 0;
+}
+
 /* div.title span.left {
     font-size: 1.4rem;
 } */
@@ -1217,50 +1222,51 @@ a.list {
 .tabs button[role="tab"]:last-child {
     margin-right: 0;
 }
-div.Panel {
+
+.Panels {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 3rem;
+    row-gap: 2rem;
+    margin-top: 2rem;
+    box-sizing: border-box;
+}
+.Panel {
+    position: relative;
     text-align: center;
-    float: left;
-    margin: 0 0 30px 10px;
-    padding-right: 50px;
-    height: 8rem;
+    box-sizing: border-box;
+    background-color: transparent;
+
+    a {
+        position: relative;
+        text-decoration: none;
+        padding: 1rem;
+        display: grid;
+        gap: 1rem;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    &:hover,
+    &:focus {
+        .PanelText {
+            text-decoration: underline;
+        }
+    }
 }
-div.Panel a {
-    text-decoration: none;
-}
-div.Panel span {
-    height: 42px;
-    display: block;
-}
-div.Panel:hover .PanelText {
-    text-decoration: underline;
-}
-div.Panel img.PanelImg {
+.PanelImg {
     width: auto;
-    max-width: 32px;
-    height: 32px;
+    max-width: 33px;
+    height: 33px;
+    margin: 0 auto;
 }
-div.Panel i.PanelIcon {
-    font-size: 32px;
+.PanelIcon {
     color: var(--text-color);
+    font-size: 32px; /* Results in height of 33px... */
+    line-height: 1;
 }
-div.user-list {
-    float: left;
-    padding: 10px;
-    margin-right: 10px;
-    margin-bottom: 24px;
-    border: 1px solid var(--border-color);
-    border-radius: 5px;
-    line-height: 2rem;
-    height: 10rem;
-    width: 10rem;
-    background-color: var(--mild-background-color);
-}
-div.user-list img {
-    width: auto;
-    max-width: 48px;
-    height: 48px;
-    margin-bottom: 16px;
-}
+
 div.up {
     margin-top: -30px;
     border: 1px solid var(--border-color);
@@ -2143,61 +2149,10 @@ span#wlan0 {
         display: none;
     }
 
-    div.Panel {
-        width: 25%;
-        height: auto;
-        margin: 0;
-        padding: 5px;
-        border-right: var(--table-alt-border-color) 1px solid;
-        border-bottom: 1px solid var(--table-alt-border-color);
-        box-sizing: border-box;
-    }
-
-    div.Panel:hover {
-        background-color: var(--mild-background-color);
-    }
-
-    div.Panel a {
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        gap: 32px;
-    }
-
-    div.Panel span {
-        height: auto;
-    }
-
-    div.Panel br,
     .vmtemplate br {
         display: none;
     }
 
-    div.Panel img.PanelImg {
-        float: left;
-        margin: 10px;
-    }
-
-    div.Panel i.PanelIcon {
-        float: left;
-        color: var(--text-color);
-        margin: 10px;
-    }
-
-    div.Panel .PanelText {
-        font-size: 1.4rem;
-        padding-top: 0;
-        text-align: center;
-    }
-
-    div.user-list {
-        background-color: transparent;
-        border: 1px solid var(--table-alt-border-color);
-    }
-
-    div.user-list:hover {
-        background-color: var(--opac-background-color);
-    }
     div.vmheader {
         display: block;
         clear: both;
@@ -2260,6 +2215,10 @@ span#wlan0 {
 
 #displaybox {
     padding: 0 1rem 4rem;
+}
+
+.Theme--sidebar #displaybox {
+    padding-left: 8rem;
 }
 
 /* Theme width styles */
